# collab_backend

./: .dockerignore  .env  .gitignore  DOCKER_GUIDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  docker-start.sh  docker.sh  enums.py  main.py  migrate.sh  nginx.conf  pyproject.toml
.github/workflows/: deploy-backend.yml
alembic/: env.py
alembic/versions/: 23e9cd3ca3e0_managed_on_cascade.py  300962d327f8_added_is_delivered.py  4abfdb0cdf78_fix_message_receiver_id_nullable_and_.py  5ac208e9f5b6_add_conversations.py  6732472b637a_metadata.py  7f7046edd5fb_add_admin_table.py  83b33463052f_refreshtoken.py  8e1d3c9beedd_add_conversation_table_and_update_.py  90aea51585ca_refreshtoken.py  9ac6269d0e5f_metadatatodata.py  ae43c5455f35_initial_migration.py  b1808c7c17f5_add_conversations_and_update_messages_.py  b617c7dbca33_initial_tables.py  d4fb1dde29d7_add_last_seen_to_users.py  d79a5fd1745f_initial_tables.py  f6b54a0c1c61_managed_cascade.py
auth/: dependencies.py
nginix/: nginix.conf
src/: README.md  config.py  database.py  main.py  models.py  myenums.py  pyproject.toml  redis.py  wow.py
src/admin/: models.py  router.py  schema.py
src/admin_logs/: models.py
src/auth/: dependencies.py  models.py  router.py  schema.py  service.py
src/brand/: dependencies.py  models.py  router.py  schema.py  service.py
src/chat/: connection.py  models.py  router.py  schema.py  services.py
src/db/: model_loader.py
src/event/: models.py  router.py  schema.py  services.py
src/influencer/: models.py  router.py  schema.py  services.py
src/middleware/: logging.py
src/notification/: models.py  router.py  schema.py  services.py  sse_manger.py  templates.py
src/otp/: models.py  router.py  schema.py  service.py
(+8 files in other folders)
