[project]
name = "collab-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "uvicorn[standard]>=0.30.0",
    "sqlmodel>=0.0.31",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.30.0",
    "psycopg[binary]>=3.2.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "pydantic[email]>=2.10.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[argon2]>=1.7.4",
    "argon2-cffi>=23.1.0",
    "redis>=5.0.0",
    "sse-starlette>=2.1.0",
    "fastapi-sse>=1.1.1",
    "python-dotenv>=1.0.1",
    "scalar-fastapi>=1.0.0",
    "python-multipart>=0.0.10",
    "psycopg2-binary>=2.9.11",
]  # optional, uv ignores this

[tool.uv]
# optional uv config goes here, leave empty if you don't need anything
